# EL_PASO

./: .readthedocs.yaml  README.md  pyproject.toml  pytest.ini
.github/workflows/: reuse_compliance.yml  test.yml
el_paso/: data_standard.py  extract_variables_from_files.py  load_indices_solar_wind_parameters.py  saving_strategy.py  units.py  variable.py
el_paso/data_standards/: data_org_standard.py  prbem_standard.py
el_paso/processing/: __init__.py  compute_pitch_angles_for_telescopes.py  convert_string_to_datetime.py
el_paso/processing/magnetic_field_utils/: __init__.py  construct_maginput.py  magnetic_field_functions.py
el_paso/saving_strategies/: __init__.py  data_org_strategy.py  density_netcdf_strategy.py  monthly_h5_strategy.py  monthly_netcdf_strategy.py  single_file_strategy.py
examples/Arase/: arase_mepe.py
examples/GOES/: process_goes_r_mps_high.py  process_goes_realtime.py
examples/VanAllenProbes/: process_efw_emfisis_density_combined.py
tests/comparisons/: test_GFZ_old.py  test_mageph_rbsp.py
tests/system/: test_arase_mepe.py  test_goes_realtime.py  test_vap_ect_combined.py
tests/system/data/processed/ARASE/arase/: arase_mepe-l3_20170901to20170930_T89.nc
tests/system/data/processed/GOES/primary/: goes_primary_20251201to20251231_T89.nc
tests/system/data/raw/: erg_mepe_l3_pa_20170908_v01_01.cdf.license  erg_orb_l2_20170908_v05.cdf  erg_orb_l2_20170908_v05.cdf.license
tests/unittests/: test_magnetic_field_model.py  test_time_conversions.py
tutorials/: rbspa_rel04_ect-hope-pa-l3_20170709_v7.4.0.cdf.license
(+20 files in other folders)
